--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.8"
+    "mongoose": "^5.6.8",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
